--- a/src/components/friendList/FriendList.module.scss
+++ b/src/components/friendList/FriendList.module.scss
@@ -1,37 +1,38 @@
-
 .item {
-    width: 200px;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    box-shadow: 1px 1px 5px black;
+  width: 200px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  box-shadow: 1px 1px 5px black;
 }
 
 .list {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  align-items: center;
 }
 .statusOn {
-width: 10px;
-height: 10px;
-border-radius: 50%;
-background-color: green;
-margin: 0 10px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: green;
+  margin: 0 10px;
 }
 .statusOff {
-width: 10px;
-height: 10px;
-border-radius: 50%;
-background-color: red;
-margin: 0 10px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: red;
+  margin: 0 10px;
 }
 
 .name {
-    margin-left: 10px;
-    font-weight: 900;
-    font-size: 18px;
+  margin-left: 10px;
+  font-weight: 900;
+  font-size: 18px;
 }
 
-.avatar{
-    padding: 5px 0;
+.avatar {
+  padding: 5px 0;
 }
