--- a/src/components/statistics/Statistics.module.scss
+++ b/src/components/statistics/Statistics.module.scss
@@ -1,6 +1,5 @@
 .statistics {
   width: 350px;
-  margin-top: 30px;
   padding-top: 15px;
   box-shadow: 1px 1px 5px black;
   display: flex;
@@ -9,6 +8,8 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   background-color: #ffffff;
+  align-items: center;
+  margin: 30px auto;
 }
 
 .title {
@@ -30,7 +31,7 @@
   flex-direction: column;
   width: 100%;
   padding: 10px 0px;
-
+  align-items: center;
   color: #ffffff;
   font-weight: 700;
 
