--- a/src/components/transaction/TransactionHistory.module.scss
+++ b/src/components/transaction/TransactionHistory.module.scss
@@ -1,6 +1,6 @@
 .table__general {
-  margin-top: 30px;
-  width: 100%;
+  margin: 30px auto;
+  width: 350px;
   text-align: center;
   border-collapse:collapse;
   border-radius: 5px;
