--- a/src/components/user/Profile.module.scss
+++ b/src/components/user/Profile.module.scss
@@ -7,6 +7,7 @@
   border-top-right-radius: 10px;
   background-color: #ffffff;
   box-shadow: 1px 1px 5px black;
+  margin: 0 auto;
 }
 
 .description {
